# nhl-data-py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/workflows/: checks.yml
nhl_data/: __init__.py
nhl_data/api/: http_client.py  stats.py
nhl_data/models/: __init__.py  base.py  draft.py  game.py  person.py  schedule.py  season.py  standing.py  stat.py  team.py  utils.py
tests/api/: test_http_client.py  test_stats.py
tests/models/: test_draft.py  test_game.py  test_person.py  test_schedule.py  test_season.py  test_standing.py  test_stat.py  test_team.py  test_utils.py
