[tool.poetry]
name = "nhl-data-py"
version = "0.1.0"
description = "Python API Wrapper over NHL APIs"
authors = ["Kyle Kohnen <git@kylekohnen.com>"]
readme = "README.md"
packages = [{include = "nhl_data_py"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
