[tool.poetry]
name = "nhl-data-py"
version = "0.1.0"
description = "Python API Wrapper over NHL APIs"
authors = ["Kyle Kohnen <git@kylekohnen.com>"]
readme = "README.md"
packages = [{include = "nhl_data"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "~0.23"


[tool.poetry.group.dev.dependencies]
flake8 = "~6.0"
black = "~23.3"
pytest = "~7.3"
pre-commit = "~3.2"
isort = "~5.12"
pytest-asyncio = "^0.21.1"


[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
